feature: refresh color and add meal details

--- a/app/src/main/res/drawable/line_5.xml
+++ b/app/src/main/res/drawable/line_5.xml
@@ -7,5 +7,5 @@
       android:strokeWidth="1"
       android:pathData="M0,0.5L240,0.5"
       android:fillColor="#00000000"
-      android:strokeColor="#FF752A"/>
+      android:strokeColor="#1E90FF"/>
 </vector>
