--- a/app/src/main/res/layout/ingredients_recycler_adapter.xml
+++ b/app/src/main/res/layout/ingredients_recycler_adapter.xml
@@ -4,34 +4,42 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="10dp"
-    android:backgroundTint="@color/background"
+    android:backgroundTint="@color/card_on_hold"
     app:cardCornerRadius="8dp"
     app:cardElevation="10dp">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="298sp"
+        android:layout_height="62sp"
         android:background="@color/card_on_hold"
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/meal_image"
+            android:id="@+id/image_ingredient"
             android:layout_width="62sp"
             android:layout_height="62sp"
-            android:layout_gravity="start"
-            android:contentDescription="@string/app_name" />
+            android:layout_gravity="start" />
 
         <TextView
-            android:id="@+id/meal_name"
-            android:layout_width="match_parent"
+            android:id="@+id/ingredient"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_margin="10dp"
-            android:text="@string/app_name"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            android:fontFamily="Roboto"
-            android:textColor="@color/text_color"/>
+            android:text="Item"
+            android:textSize="20dp"
+            android:textStyle="bold" />
 
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/measure"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right"
+        android:layout_margin="10dp"
+        android:textColor="@color/text_color_detail"
+        android:text="Item"
+        android:textSize="20dp"
+        android:textStyle="bold" />
 </androidx.cardview.widget.CardView>
