--- a/app/src/main/res/layout/recycler_home_design.xml
+++ b/app/src/main/res/layout/recycler_home_design.xml
@@ -10,7 +10,7 @@
     <LinearLayout
         android:layout_width="120sp"
         android:layout_height="match_parent"
-        android:background="#480F28"
+        android:background="@color/card_on_hold"
         android:orientation="vertical">
 
         <ImageView
@@ -23,12 +23,12 @@
         <TextView
             android:id="@+id/meal_name"
             android:layout_width="120dp"
-            android:layout_height="60sp"
+            android:layout_height="65sp"
             android:layout_gravity="start"
             android:layout_margin="10dp"
             android:fontFamily="Roboto"
             android:text="@string/app_name"
-            android:textColor="#E6E5E5"
+            android:textColor="@color/text_color"
             android:textSize="18sp"
             android:textStyle="bold" />
 
