--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,14 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
-    tools:ignore="MissingConstraints">
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    tools:ignore="ScrollViewCount">
 
         <SearchView
             android:id="@+id/search"
@@ -20,13 +16,14 @@
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
             android:iconifiedByDefault="false"
-            android:padding="4px"
+            android:clickable="false"
+            android:focusable="false"
+            android:padding="4dp"
             android:queryHint="Search Meal"
             android:background="@drawable/search_rounded"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
 
         <View
             android:id="@+id/search_meals"
@@ -91,51 +88,6 @@
             app:layout_constraintTop_toBottomOf="@+id/fire_breakfast"
             tools:listitem="@layout/recycler_home_design" />
 
-
-        <TextView
-            android:id="@+id/starter"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:drawablePadding="17.5sp"
-            android:gravity="start"
-            android:paddingLeft="37.5sp"
-            android:text="@string/starter"
-            android:textColor="@color/secondary_dark"
-            android:textSize="24sp"
-            app:layout_constraintStart_toStartOf="@id/recycler_breakfast"
-            app:layout_constraintTop_toBottomOf="@id/recycler_breakfast" />
-
-        <ImageView
-            android:id="@+id/fire_starter"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
-            android:layout_marginLeft="24dp"
-            android:contentDescription="@string/starter"
-            android:src="@drawable/line_5"
-            app:layout_constraintBottom_toBottomOf="@+id/starter"
-            app:layout_constraintStart_toStartOf="@+id/starter"
-            app:layout_constraintTop_toBottomOf="@+id/starter" />
-
-        <ProgressBar
-            android:id="@+id/progress_bar_starter"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:visibility="invisible"
-            app:layout_constraintEnd_toEndOf="@id/starter"
-            app:layout_constraintStart_toStartOf="@id/starter"
-            app:layout_constraintTop_toBottomOf="@+id/fire_starter" />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_starter"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/fire_starter"
-            tools:listitem="@layout/recycler_home_design" />
-
         <TextView
             android:id="@+id/dessert"
             android:layout_width="wrap_content"
@@ -146,8 +98,8 @@
             android:text="@string/dessert"
             android:textColor="@color/secondary_dark"
             android:textSize="24sp"
-            app:layout_constraintStart_toStartOf="@+id/recycler_starter"
-            app:layout_constraintTop_toBottomOf="@+id/recycler_starter" />
+            app:layout_constraintStart_toStartOf="@+id/recycler_breakfast"
+            app:layout_constraintTop_toBottomOf="@+id/recycler_breakfast" />
 
         <ImageView
             android:id="@+id/fire_dessert"
@@ -179,5 +131,4 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/fire_dessert"
             tools:listitem="@layout/recycler_home_design" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</ScrollView>
+</androidx.constraintlayout.widget.ConstraintLayout>
